--- a/src/components/TripList.css
+++ b/src/components/TripList.css
@@ -1,34 +1,49 @@
 .trip-list {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .trip-card {
-  background-color: #f9f9f9;
+  margin-top: 20px;
+  padding: 20px;
+  background: #f8f8f8;
   border: 1px solid #ddd;
   border-radius: 5px;
-  padding: 20px;
-  margin: 10px;
-  text-align: left;
-  width: 200px;
-  position: relative;
+  text-align: center;
 }
 
-.trip-card h3 {
-  margin-top: 0;
-}
-
-.trip-card .delete-button {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: red;
+.delete-button {
+  background-color: red;
   color: white;
   border: none;
-  border-radius: 50%;
-  width: 25px;
-  height: 25px;
+  border-radius: 5px;
+  padding: 5px 10px;
   cursor: pointer;
-  font-size: 16px;
+}
+
+.delete-button:hover {
+  background-color: darkred;
+}
+
+/* Pfeile anpassen */
+.arrow {
+  display: block;
+  width: 30px;
+  height: 30px;
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  padding: 3px;
+  cursor: pointer;
+}
+
+.arrow.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+  margin-left: auto;
+}
+
+.arrow.left {
+  transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
+
 }
